# static_interface

./: CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  configure.sh  run.sh
_src/dynamic/: WindowImpl.cpp  WindowImpl.hpp  WindowInterface.cpp  WindowInterface.hpp
_src/src/: WindowImpl.hpp  WindowInterface.cpp  WindowInterface.hpp
_src/static/: WindowImpl.cpp  WindowImpl.hpp  WindowInterface.hpp
_src/test/: main.cpp
